export const snapshot = {};

snapshot[`www middleware 1`] = `
{
  body: "",
  headers: {
    location: "http://localhost/",
  },
  method: "GET",
  request: "http://www.localhost/",
  status: 301,
  statusText: "",
}
`;

snapshot[`www middleware 2`] = `
{
  body: "OK",
  headers: {
    "content-type": "text/plain;charset=UTF-8",
  },
  method: "GET",
  request: "http://localhost/",
  status: 200,
  statusText: "",
}
`;

snapshot[`www middleware 3`] = `
{
  body: "",
  headers: {
    location: "https://localhost/",
  },
  method: "GET",
  request: "https://www.localhost/",
  status: 301,
  statusText: "",
}
`;

snapshot[`www middleware (add www) 1`] = `
{
  body: "OK",
  headers: {
    "content-type": "text/plain;charset=UTF-8",
  },
  method: "GET",
  request: "http://www.localhost/",
  status: 200,
  statusText: "",
}
`;

snapshot[`www middleware (add www) 2`] = `
{
  body: "",
  headers: {
    location: "http://www.localhost/",
  },
  method: "GET",
  request: "http://localhost/",
  status: 301,
  statusText: "",
}
`;

snapshot[`www middleware (add www) 3`] = `
{
  body: "OK",
  headers: {
    "content-type": "text/plain;charset=UTF-8",
  },
  method: "GET",
  request: "https://www.localhost/",
  status: 200,
  statusText: "",
}
`;
